--- a/_config.yml
+++ b/_config.yml
@@ -98,9 +98,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-gtag" # 구글 어날리틱스 등록 false (default), "google", "google-universal", "custom"
+  provider               : # "google-gtag" # 구글 어날리틱스 등록 false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-134677596-2"
+    tracking_id          : # "UA-134677596-2"
     anonymize_ip         : # true, false (default)
 
 # Site Author
@@ -288,7 +288,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: false
+      read_time: true
       comments: true
       share: true
       related: true
