--- a/_config.yml
+++ b/_config.yml
@@ -291,7 +291,7 @@ defaults:
       read_time: false
       comments: true
       share: true
-      related: false
+      related: true
       toc_ads: true
       toc_sticky: true
 
