--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : Ssuby's Corgasm
+title                    : Ssuby's Corgaxm
 title_separator          : "-"
 name                     : "Yoonseop Shin"
 description              : "코딩 및 개발 정리 블로그"
