--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url                      : "https://sys09270883.github.io"
 baseurl                  : # 서브 경로가 있는 경우 기재
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/bio-photo-keyboard.jpg"
-logo                     : "/assets/images/teaser-image.jpg"
+logo                     : "/assets/images/logo-image.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -106,7 +106,7 @@ analytics:
 # Site Author
 author:
   name             : "Yoonseop Shin"
-  avatar           : # "/assets/images/bio-photo-keyboard.jpg"
+  avatar           : "/assets/images/bio-photo-keyboard.jpg"
   bio              : "코딩 및 개발 기록용 블로그입니다."
   location         : "Seoul, Korea"
   email            :
