--- a/_config.yml
+++ b/_config.yml
@@ -293,7 +293,7 @@ defaults:
       comments: true
       share: true
       related: true
-      toc_ads: true
+      toc_ads: false  # 구글 광고 사용 안함
       toc_sticky: true
 
   # _pages
@@ -307,3 +307,4 @@ defaults:
       comments: false
       share: true
       related: false
+      toc_ads: false  # 구글 광고 사용 안함
