--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,5 @@ main:
     url: /year-archive/
   - title: "Category"
     url: /categories/
-  - title: "Tag"
-    url: /tags/
+  # - title: "Tag"
+    # url: /tags/
