--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Yoonseop Shin"
   avatar           : "/assets/images/main-keyboard.jpg"
-  bio              : "코딩 및 개발 기록용 블로그입니다."
+  bio              : ""
   location         : "Seoul, Korea"
   email            :
   links:
