--- a/_config.yml
+++ b/_config.yml
@@ -17,14 +17,14 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : Ssuby's Corgaxm
+title                    : Yoonseop's Corgaxm
 title_separator          : "-"
 name                     : "Yoonseop Shin"
 description              : "코딩 및 개발 정리 블로그"
 url                      : "https://sys09270883.github.io"
 baseurl                  : # 서브 경로가 있는 경우 기재
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/main-keyboard.jpg"
+teaser                   : # "/assets/images/main-keyboard.jpg"
 logo                     : # "/assets/images/logo-image.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
