--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : # "/assets/images/bio-photo-keyboard.jpg"
+og_image                 : "/assets/images/main-keyboard.jpg"
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
