--- a/_config.yml
+++ b/_config.yml
@@ -289,11 +289,11 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: false
+      read_time: true
       comments: true
       share: true
       related: true
-      toc_ads: false  # 구글 광고 사용 안함
+      toc_ads: true  # 구글 광고 사용
       toc_sticky: true
 
   # _pages
@@ -307,4 +307,4 @@ defaults:
       comments: false
       share: true
       related: false
-      toc_ads: false  # 구글 광고 사용 안함
+      toc_ads: true  # 구글 광고 사용
