--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@ assets/js/lunr/* linguist-vendored
 assets/js/plugins/* linguist-vendored
 assets/js/vendor/* linguist-vendored
 _sass/minimal-mistakes/vendor/* linguist-vendored
+
+*.js linguist-vendored
