--- a/test/_config.yml
+++ b/test/_config.yml
@@ -65,7 +65,7 @@ algolia:
   powered_by             : true
 
 # SEO Related
-google_site_verification :
+google_site_verification : "uaZKXO3iyWs6jkO4nOfsoDJQTdUdEhmPF95xuJfOVG4"
 bing_site_verification   :
 yandex_site_verification :
 
